# Copyright (C) 2010 Niels Horn <niels.horn@gmail.com>
#
# This program is free software; you can redistribute it and/or 
# modify it under the terms of the GNU General Public License 
# as published by the Free Software Foundation; either 
# version 2 of the License, or (at your option) any later 
# version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
AC_INIT
AC_CHECK_LIB(ncurses,initscr,,NCURS="no")
AC_CHECK_LIB(form,new_form,,NCURS="no")
AC_CHECK_LIB(panel,new_panel,,NCURS="no")
if test "$NCURS" = "no"; then
	echo
	echo " ** ERROR: One of the ncurses libraries (ncurses/form/panel) was not found!"
	echo
	exit
fi
AM_CONFIG_HEADER(config.h)
CFLAGS="$CFLAGS -Wall"
AM_INIT_AUTOMAKE(nhexed,2.00.02)
AC_PROG_CC
AC_OUTPUT(Makefile src/Makefile)

